--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-target/
-outputs/
-baseline/
-tests/*/gen
-js/conformance/protoc_gen_ts_conformance
 .DS_Store
-node_modules/
-pprof-profile-*
+js/.DS_Store
+js/benchmark/.DS_Store
+src/.DS_Store
+src/runtime/.DS_Store
+tests/.DS_Store
+tests/*.ets
+target/
+.idea/
