--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,8 @@ anyhow = "1.0.75"
 wasm-bindgen = "0.2.88"
 console_error_panic_hook = "0.1.7"
 convert_case = "0.6.0"
+cargo-patch = "0.3"
+
 
 [build-dependencies]
 protobuf-codegen = "3.1.0"
@@ -51,8 +53,8 @@ cfg-if = "1.0.0"
 protobuf-parse = "=3.4.0"
 pretty_assertions_sorted = "1.2.3"
 
-[patch.crates-io]
-protobuf-parse = { path = './target/patch/protobuf-parse-3.4.0' }
+#[patch.crates-io]
+#protobuf-parse = { path = './target/patch/protobuf-parse-3.4.0' }
 
 [package.metadata.patch.protobuf-parse]
 version = "3.4.0"
